bad/assign_func_call_array_string.example_compiler_output
ERROR
[1mbad/assign_func_call_array_string.lat:5:8: [1;31merror: [0;1mleft side is not assignable[m
	foo() = "";
	      [1;32m^[m
[1mbad/assign_func_call_array_string.lat:5:2: [1;34mnote: [0;1mleft side starts here[m
	foo() = "";
	[1;32m^[m
